--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h3>Deepak Sharma from khurja</h3>
+    <h3>Deepak Sharma from khurja </h3>
+    <h5>branch: CSE </h5>
 </body>
 </html>
